styles/forms.css
/* ... */
/* UNDETERMINED */
input:focus:not(:placeholder-shown):invalid, textarea:focus:not(:placeholder-shown):invalid, input:focus:not(:placeholder-shown):out-of-range, select:focus:not(:placeholder-shown):invalid, [aria-invalid=true]:focus:not(:placeholder-shown):invalid {
  /* TODO: fix intermediate styles */
  /* TODO: Possibly add inert */
  color: yellow;
  background-image: initial;
}

/* INERT */
/*
  - https://github.com/WICG/inert/blob/main/explainer.md
  - https://www.stefanjudis.com/blog/the-inert-attribute-is-finally-coming-to-the-web/
*/
[inert], [inert] * {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
  -webkit-user-select: none;
          user-select: none;
}


/* ENABLED */
:enabled, [aria-disabled=false]
 { /* https://developer.mozilla.org/en-US/docs/Web/CSS/:enabled */ }

/* DISABLED */
/*
  - https://catalin.red/disabled-form-controls/
  - https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-disabled
  - https://stackoverflow.com/questions/12591966/html-disabled-button-getting-active-css-pseudo-class
  - https://dev.w3.org/html5/spec-LC/association-of-controls-and-forms.html#enabling-and-disabling-form-controls
*/
:disabled, [aria-disabled=true],
:disabled:hover, [aria-disabled=true]:hover
 { /* https://developer.mozilla.org/en-US/docs/Web/CSS/:disabled */
  filter: none;
  opacity: 30%;
  outline: none;
  cursor: not-allowed;
  pointer-events: none; /* https://jakearchibald.com/2017/events-and-disabled-form-fields/ */
  -webkit-user-select: none;
          user-select: none;
  text-decoration: line-through;
  text-decoration-color: GrayText;
}



.vertical {
  /*
    - https://www.w3.org/International/articles/vertical-text/
    - https://developer.mozilla.org/en-US/docs/Web/CSS/direction
  */
  /* rotate: 90deg; */
  direction: rtl;
  outline: 4px dotted red;
  writing-mode: bt-l;
  background: pink;
  display: table-cell;
  width: auto !important;
  padding: 0;
  writing-mode: vertical-lr;
}

.vertical input[type=range] {
  background:red;
  writing-mode: bt-lr; /* IE */
  /*
    - https://caniuse.com/?search=vertical%20slider
    - Chromium Bug - https://bugs.chromium.org/p/chromium/issues/detail?id=341071
    - https://stackoverflow.com/questions/39809103/vertical-slider-for-chrome-and-moz
    - https://stackoverflow.com/questions/3556157/how-to-customize-the-html5-input-range-type-looks-using-css
  */
  /* -webkit-appearance: slider-vertical; */ /* WebKit */
  /* appearance: slider-vertical; */ /* Living Standard */
  accent-color: CurrentColor;
  line-height: 100vh;
  /* max-height: 5ch !important; */
  width: 100% !important;
  max-width: 14ch !important;
  /* rotate:  90deg; */
  padding: 0;
}
.vertical input[type=range]::-moz-range-track {
  height: 20px;
  background: orange;
  border: 2px solid red;
}
.vertical input[type=range]::-moz-range-thumb {
  height: 30px;
  background: blue;
}

::-webkit-slider-runnable-track {
  margin: 0;
  padding: 1ch;
  background: green;
  border: 2px solid red;
  outline: 3px dotted purple;
}
::-webkit-slider-thumb {
  padding: 3ch;
  display: block;
  background: orange;
  border: 7px solid currentColor;
  margin: 1ch;
  outline: 2px solid blue;
}

/* indicators */
/* Style meter & progress
 *   - https://codepen.io/matt-west/pen/bpzEy
 *   - https://css-tricks.com/html5-meter-element/
 *   - 
 *   - https://stackoverflow.com/questions/8094835/how-to-style-html5-meter-tag
 */
meter, progress {
  cursor: progress;
   /* Correct vertical alignment in Chrome, Firefox, & Opera. */
  background: turquoise;
  /* border: 1ch solid currentColor; */
  /* outline: 1ch solid orange; */
  /* outline-offset: 1ch; */
  margin: var(--margin);
  width: auto;
  border-radius: 1ch;
  display: list-item;
  /* list-style-position: inside; */
  /* height: fit-content; */
  block-size: fit-content;
}
/* https://scottaohara.github.io/a11y_styled_form_controls/src/meter/ */
meter {}
progress {
  appearance: initial;
  /* height: auto; */
}
progress[value] {
}
meter { /* https://css-tricks.com/html5-meter-element/ */
  /* -webkit-appearance: none; */
  /* appearance: inherit; */
}

::-webkit-meter-inner-element,
::-webkit-progress-inner-element {
  /* border: 1ch solid currentColor; */
  /* margin: var(--margin-collapse-bugfix) 5%; */
  /* outline: 1ch solid orange; */
  width: inherit;
  background: orange;
  display: inherit;
  margin: 0ch;
  border-radius: 1ch;
}

::-webkit-meter-bar,
::-webkit-progress-bar
{
  margin: 1ch;
  /* border-radius: 0; */
  position: relative;
  /* outline: 1ch solid orange; */
  /* border: 1ch solid currentColor; */
  width: inherit;
  border-radius: 1ch;
  overflow: visible;
  display: list-item;
  /* padding: 1ch; */
}
::-webkit-meter-optimum-value,
::-webkit-progress-optimum-value
{
  /* margin: 1ch; */
  /* display: flex; */
  width: fit-content;
  /* padding: 1ch; */
  display: list-item;
  border-radius: 1ch;
}



::-webkit-meter-bar, ::-webkit-progress-bar {
  background: Canvas;
}

meter::-webkit-meter-optimum-value,
progress::-webkit-progress-optimum-value
  { background: pink; }
meter::-webkit-meter-suboptimum-value,
progress::-webkit-pgoress-suboptimum-value
  { background: orange; }
meter::-webkit-meter-even-less-good-value
progress::-webkit-progress-even-less-good-value
  { background: green; }

progress::marker {
  color: magenta;
  content: attr(value);
}

